--- a/chap-results.tex
+++ b/chap-results.tex
@@ -85,7 +85,7 @@ An additional downside of the naive sampling is the poor temporal stability when
     \includegraphics[width=.48\textwidth]{screenshots/ism_splat_cropped} &
     \includegraphics[width=.48\textwidth]{screenshots/ism_single_pixel_cropped}
   \end{tabular}
-  \caption{ISMs rendered using the splat renderer (left) and single-pixel renderer (right) with default settings. The single-pixel renderer performs interpolation between points, uses more points and doesn't let points ``bleed'' into neighboring ISMs, but takes more time.}
+  \caption{ISMs rendered using the splat renderer (left) and single-pixel renderer (right) with default settings. The single-pixel renderer performs interpolation between points, uses more points and does not let points ``bleed'' into neighboring ISMs, but takes more time.}
   \label{fig:results:isms}
 \end{figure}
 
