--- a/foo-thesis.bib
+++ b/foo-thesis.bib
@@ -1153,3 +1153,23 @@ pages = {2109--2117},
 keywords = {I.3.7 [Computer Graphics]: Three-Dimensional Graphics and Realism—Raytracing},
 year = {2010},
 }
+
+@article{Günther:2013:AcceleratedPointCloudRendering,
+title = {A GPGPU-based Pipeline for Accelerated Rendering of Point Clouds},
+author = {Christian Günther and Thomas Kanzok and Lars Linsen and Paul Rosenthal},
+editor = {Vaclav Skala},
+url = {http://www.paul-rosenthal.de/wp-content/uploads/2013/06/guenther-wscg-2013.pdf
+http://www.paul-rosenthal.de/wp-content/uploads/2013/06/guenther-wscg-2013.png},
+issn = {1213-6972},
+year = {2013},
+date = {2013-01-01},
+journal = {Journal of WSCG},
+volume = {21},
+number = {2},
+pages = {153--161},
+publisher = {UNION Agency -- Science Press},
+address = {Plzen, Czech Republic},
+keywords = {},
+pubstate = {published},
+tppubtype = {article}
+}
